@@ -16,7 +16,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 Requirements:
 Apache 2.x with mod_rewrite enabled
-PHP 5.4.x with filter extension enabled
+PHP 5.4.x and up with filter extension enabled
 
 Dependencies:
 TWIG 1.16.2 and up, see: http://twig.sensiolabs.org/ (install via composer)
@@ -27,10 +27,9 @@ Haase IT Toolbox (installed via composer)
 In the setup directory you will find scripts for setting up the database.
 
 In the app/config directory you will find example config files.
-Save a copy of each and replace the example in the filename with inc
-like this: config.core.example.php -> config.core.inc.php
+Save a copy of each and remove the dist in the filename
+like this: config.core.dist.yml -> config.core.yml
 
-Rename the config.*.example.php to config.*.php and edit them to your needs.
 Put the required libraries into their configured paths.
 Run the db-scripts.sql on your configured database to init the database.
 Configure user auth for the /_admin/ directory in the .htaccess file
@@ -38,11 +37,15 @@ Configure user auth for the /_admin/ directory in the .htaccess file
 For production use turn of display_errors at the beginning of app/init.php
 
 The following directories must be writeable by the webserver:
-web/_admin/orderlogs (log directory for orders)
-web/_admin/ipnlogs/ (log directory for paypal transactions)
+hcsflogs (log directory)
 templatecache
 
 at http://www.yourhost.tld/_admin/ you will find an info if these directories exist
 and are writable
+
+Set your encrypted admin password in config.scrts.yml, first though set your blowfish salt.
+You will find a tool to encrypt it at /_admin/index.html - As long as there are no users set
+in config.scrts.yml, you can access this page (but not the other pages in the admin area)
+without authenticating.
 
 Add your custom views (templates) to /customviews (get default views at /src/views)
