@@ -3,7 +3,7 @@
     "twig/twig": "1.*",
     "phpmailer/phpmailer": "5.2.*",
     "symfony/yaml": "@stable",
-    "haaseit/toolbox": "1.2.3",
+    "haaseit/toolbox": "1.2.4",
     "aura/autoload": "2.0.*"
   }
 }
